--- a/ct_pipeline/retrain_model_flow-deployment.yaml
+++ b/ct_pipeline/retrain_model_flow-deployment.yaml
@@ -1,26 +1,17 @@
 ###
 ### A complete description of a Prefect Deployment for flow 'retrain-model-flow'
 ###
-name: retrain_model_simple
+name: retrain_model
 description: null
 version: 24d9fea6245bb85538fa93501ae111aa
 # The work queue that will handle this deployment's runs
-work_queue_name: test
-work_pool_name: default-agent-pool
+work_queue_name: default
+work_pool_name: null
 tags: []
 parameters: {}
-schedule:
-  interval: 180.0
-  anchor_date: '2023-03-04T14:40:01.792000+00:00'
-  timezone: UTC
-is_schedule_active: true
+schedule: null
+is_schedule_active: null
 infra_overrides: {}
-
-###
-### DO NOT EDIT BELOW THIS LINE
-###
-flow_name: retrain-model-flow
-manifest_path: null
 infrastructure:
   type: process
   env: {}
@@ -29,13 +20,16 @@ infrastructure:
   command: null
   stream_output: true
   working_dir: null
-  _block_document_id: 3ed354a0-b3df-43cc-aa57-85961fe1bace
-  _block_document_name: anonymous-5a837a88-0daf-48d0-8903-80362c3c2d50
-  _is_anonymous: true
   block_type_slug: process
   _block_type_slug: process
+
+###
+### DO NOT EDIT BELOW THIS LINE
+###
+flow_name: retrain-model-flow
+manifest_path: null
 storage: null
-path: /Users/yhchan/Downloads/FYP/CT_of_recommendation_system/ct_pipeline
+path: /Users/yhchan/Downloads/FYP/CT_Recsys/ct_pipeline
 entrypoint: ct_pipeline_flow.py:retrain_model_flow
 parameter_openapi_schema:
   title: Parameters
@@ -43,4 +37,4 @@ parameter_openapi_schema:
   properties: {}
   required: null
   definitions: null
-timestamp: '2023-03-04T14:47:40.222382+00:00'
+timestamp: '2023-04-29T16:22:40.232863+00:00'
